--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "envify": "^1.2.1",
     "react": "^0.9.0",
     "grunt-contrib-watch": "^0.5.3",
-    "grunt-contrib-less": "^0.10.0"
+    "grunt-contrib-less": "^0.10.0",
+    "lodash": "^2.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
